fix form autofill and button with on mobile resolution,add cursor pointer to slider button, add max height header, add hover effects to links

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -15,7 +15,14 @@
     width: 280px;
 
     @include onTablets {
-      padding: 14px 0;
+      width: 264px;
+    }
+  }
+
+  &--vision {
+    padding: 17px 0;
+
+    @include onTablets {
       width: 264px;
     }
   }
@@ -28,5 +35,13 @@
   &--white {
     background: #fff;
     color: #253757;
+  }
+
+  &--form {
+    width: auto;
+
+    @include onTablets {
+      width: 264px;
+    }
   }
 }
