--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -102,8 +102,9 @@
     text-decoration: none;
     color: #fff;
 
-    &:visited {
-      color: #fff;
+    &:hover {
+      color: #2060f6;
+      transition: color $effectDuration;
     }
   }
 
