--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -27,6 +27,8 @@
     font-size: 15px;
     font-weight: 600;
     transition: border-bottom $effectDuration;
+    -webkit-text-fill-color: #fff;
+    -webkit-box-shadow: 0 0 0 1000px #2c2c2c inset;
 
     &::placeholder {
       color: #fff;
