--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,6 +6,8 @@
 
   height: 100vh;
 
+  max-height: 1440px;
+
   &__title {
     font-family: "Poppins", sans-serif;
     font-style: normal;
