--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -19,5 +19,10 @@
   &__link {
     color: #fff;
     text-decoration: none;
+
+    &:hover {
+      color: #2060f6;
+      transition: color $effectDuration;
+    }
   }
 }
