--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -76,6 +76,7 @@
     background-size: cover;
     width: 100%;
     height: 100%;
+    max-height: 1320px;
 
     @include onSmallDesktop {
       border-radius: 30px 0;
@@ -128,6 +129,7 @@
     background-position: center;
     background-color: #fff;
     border-radius: 50%;
+    cursor: pointer;
 
     &--right {
       background-image: url(../images/slider/right-arrow.svg);
