--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -64,8 +64,9 @@
       background-color: #2060f6;
     }
 
-    &:visited {
-      color: $header-text-color;
+    &:hover {
+      color: #2060f6;
+      transition: color $effectDuration;
     }
   }
 
