--- a/src/styles/blocks/vision.scss
+++ b/src/styles/blocks/vision.scss
@@ -15,6 +15,10 @@
   &__content {
     @include contentPaddingInline;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     text-align: center;
   }
 
@@ -36,9 +40,5 @@
       margin-bottom: 64px;
       font-size: 24px;
     }
-  }
-
-  &__button {
-    padding: 17px 0;
   }
 }
